apps/backend/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-be
spec:
  selector:
    matchLabels:
      app: ecommerce-be
  template:
    metadata:
      labels:
        app: ecommerce-be
    spec:
      containers:
        - name: ecommerce-be
          image: kristijan92/ecommerce-shop-be:1.1.4
          resources:
            requests:
              memory: "128Mi"
              cpu: "200m"
            limits:
              memory: "256Mi"
              cpu: "500m"
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /ready
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
