apps/backend/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-be-service
spec:
  selector:
    app: ecommerce-be
  ports:
    - port: 80
      targetPort: 3000
